<resources>
    <string name="app_name">Filmora</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_app">Ｆｉｌｍｏｒａ</string>
    <string name="usernameEmpty">Username cannot be empty.</string>
    <string name="fillRequiredFields">Please fill in all the required fields correctly before proceeding.</string>
    <string name="check_your_connection">Check your connection</string>
    <string name="search_movies">Search movies...</string>
    <string name="search_series">Search series...</string>
    <string name="poster_image">Poster Image</string>
    <string name="next">Next</string>
    <string name="what_genres_do_you_dislike">What genres do you dislike?</string>
    <string name="what_genres_do_you_love">What genres do you love?</string>
    <string name="selected_movies">Selected Movies</string>
    <string name="selected_series">Selected Series</string>
    <string name="choose_your_favorite_movies">Choose your favorite movies</string>
    <string name="choose_your_favorite_series">Choose your favorite series</string>
    <string name="your_movie_taste">Your Movie Taste</string>
    <string name="your_series_taste">Your Series Taste</string>
    <string name="empty_text">- - - -</string>
    <string name="no_rate">0.0</string>
    <string name="title">Title</string>
    <string name="confirmed">Confirmed</string>
    <string name="back_button">back button</string>
    <string name="remove">Remove</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="celebrities">Celebrities</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>

    <string name="list">List</string>
    <string name="favorite">Favorite</string>
    <string name="watchlist">Watchlist</string>
    <string name="rate">Rate</string>
    <string name="seasons">Seasons</string>
    <string name="cast_amp_crew"><![CDATA[Cast & Crew]]></string>
    <string name="see_all">See all</string>
    <string name="character_name">Character Name</string>
    <string name="description">Description</string>

    <string name="release_date">Rebase Date</string>
    <string name="duration">Duration</string>
    <string name="original_language">Original Language</string>
    <string name="languages_spoken">Language Spoken</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="production_countries">Production Countries</string>
    <string name="production_companies">Production Companies</string>

    <string name="content_type">Content Type</string>
    <string name="total_seasons_amp_episodes">Total Seasons &amp; Episodes</string>
    <string name="broadcast_networks">Broadcast Networks</string>
    <string name="creators">Creators</string>
    <string name="about_tv_show">About TV Show</string>
    <string name="first_release">First Release</string>

    <string name="seasons_and_episodes">Seasons: %1$s, Episodes: %2$s</string>
    <string name="release_value">%1$s, (%2$s)</string>

    <string name="see_collection">See Collection</string>
    <string name="collection">Collection</string>
    <string name="part_of_collection">Part of the %1$s</string>

    <string name="similar_movies">Similar Movies</string>
    <string name="similar_tv_show">Similar TV Shows</string>
    <string name="recommendations">Recommendations</string>
    <string name="no_any_data_found">No any data found</string>

    <string name="videos">Videos</string>
    <string name="backdrops">Backdrops</string>
    <string name="posters">Posters</string>

    <string name="written_on_date">Written on %1$s</string>
    <string name="review_rating">★ %1$s</string>
    <string name="video_thumbnail">Thumbnail image for the video</string>
    <string name="play_video">Play icon to indicate the video can be played</string>
    <string name="placeholder_video">Placeholder image for video thumbnail</string>
    <string name="video_title">Title of the video</string>
    <string name="video_details">Details about the video including site and type</string>
    <string name="youtube_logo">YouTube logo</string>
    <string name="video_published_at">Date when the video was published</string>
    <string name="all_backdrops">All Backdrops</string>
    <string name="all_videos">All Videos</string>
    <string name="all_posters">All Posters</string>
    <string name="reviews">Reviews</string>
    <string name="trending">Trending</string>
    <string name="popular">Popular</string>
    <string name="playing_in_theatres">Playing In Theatres</string>
    <string name="airing_today">Airing Today</string>
    <string name="top_rated">Top Rated</string>
    <string name="on_tv">On TV</string>
    <string name="profiles">Profiles</string>
    <string name="known_for">Known For</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="age">Age</string>
    <string name="deathday">Deathday</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="about">About</string>

    <string name="role">as %s</string>
    <string name="search_hint">Search movies, TV shows, people...</string>
    <string name="not_result_found">Not results found</string>
    <string name="no_description">Not description found</string>
    <string name="rated_movie_and_tv_shows">Rated Movie and TV Shows</string>
    <string name="ratings">Ratings</string>
    <string name="movies_and_tv_shows_added_to_watchlist">Movies and TV Shows Added to watchlist</string>
    <string name="your_favorite_movie_and_tv_shows">Your favorite Movie and TV Shows</string>
    <string name="lists">lists</string>
    <string name="create_updates_and_manage_yor_personal_lists">Create, updates and manage yor personal lists</string>
    <string name="sing_in_sing_up">Sing in / Sing up</string>
    <string name="no_data_found">No Data Found</string>
    <string name="dialog_login_required_message">Please sign in with your username or register if you don\'t have an account.</string>



    <string name="app_logo">App Logo</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="btn_login">Login</string>
    <string name="label_no_account">Don\'t have an account?</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="label_or">\u00A0\u00A0OR\u00A0\u00A0</string>
    <string name="btn_continue">Continue</string>


    <string name="error_no_internet_connection">No internet connection.</string>
    <string name="error_server">A server error occurred.</string>
    <string name="error_unknown">An unknown error occurred.</string>
    <string name="error_empty_credentials">Username and Password must not be empty</string>
    <string name="error_empty_response">No data available</string>
    <!-- Login process -->
    <string name="error_failed_request_token">Failed to get request token.</string>
    <string name="error_failed_validate_token">Failed to validate token.</string>

    <string name="error_password_short">The password is short (at least 4 characters).</string>
    <string name="error_contains_space">Username cannot contain spaces.</string>
    <string name="error_select_limit">You can only select up to 5 items.</string>
    <string name="error_already_selected">This item is already selected.</string>
    <string name="error_minimum_selection">Please select 5 items.</string>
    <string name="error_genre_preferences">Please select your genre preferences.</string>
    <string name="error_load_genres">Failed to load genres.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_no_browser_found">No browser found to open link</string>

</resources>