<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.authentication.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_normal">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/login_logo_size"
            android:layout_height="@dimen/login_logo_size"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/tmdb_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Corner.Rounded" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/CustomTextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:hint="@string/label_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:startIconDrawable="@drawable/user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:baselineAligned="false"
                android:inputType="text"
                android:textSize="@dimen/text_body" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/label_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_username"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:inputType="textPassword"
                android:textSize="@dimen/text_body" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/funnelsans_semibold"
            android:text="@string/action_forgot_password"
            android:textColor="@color/md_theme_primary"
            android:textSize="@dimen/text_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:paddingTop="@dimen/spacing_small"
            android:text="@string/btn_login"
            android:textAllCaps="false"
            android:textSize="@dimen/text_body"
            app:cornerRadius="@dimen/corner_radius_normal"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />


        <LinearLayout
            android:id="@+id/ll_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/label_no_account"
                android:textColor="?attr/colorOnBackground"
                android:textSize="@dimen/text_body" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_xsmall"
                android:fontFamily="@font/funnelsans_bold"
                android:text="@string/action_sign_up"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/md_theme_primary"
                android:textSize="@dimen/text_body" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/btn_continue"
            android:textAllCaps="false"
            android:textSize="@dimen/text_body"
            app:cornerRadius="@dimen/corner_radius_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewOr" />

        <View
            android:id="@+id/viewOr"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_divider_height_bold"
            android:layout_marginTop="@dimen/spacing_xlarge"
            android:background="@drawable/divider_gradient"
            app:layout_constraintTop_toBottomOf="@+id/ll_signup" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_background"
            android:text="@string/label_or"
            app:layout_constraintBottom_toBottomOf="@+id/viewOr"
            app:layout_constraintEnd_toEndOf="@+id/viewOr"
            app:layout_constraintStart_toStartOf="@+id/viewOr"
            app:layout_constraintTop_toTopOf="@+id/viewOr">

        </TextView>

        <ProgressBar
            android:id="@+id/login_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toTopOf="@+id/btn_login" />

        <ProgressBar
            android:id="@+id/continue_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btn_continue"
            app:layout_constraintEnd_toEndOf="@+id/btn_continue"
            app:layout_constraintStart_toStartOf="@+id/btn_continue"
            app:layout_constraintTop_toTopOf="@+id/btn_continue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
